# mcdonalds

./: mcdonalds_clean.csv  pyproject.toml  run.py
