[tool.poetry]
name = "mcdonalds"
version = "0.1.0"
description = ""
authors = ["bethlamacchia <46002319+bethlamacchia@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
